--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Ionic 2/3 Sqlite Example
     </ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click) = "getAllContacts()">
